# nanobot

./: game.html
ai_to_pixel_art/: README.md  pyproject.toml  test_basic.py  test_converter.py  test_dither.py
ai_to_pixel_art/pixel_art_converter/: cli.py  converter.py
nanobot/config/: schema.py
nanobot/skills/rss-news/: SKILL.md
nanobot/skills/rss-news/scripts/: fetch_news.py
tank_game/: README.md  requirements.txt
tank_game/ai/: agent.py  env.py  train.py
tank_game/backend/: game.py  main.py
tank_game/frontend/: game.js  index.html  style.css
tank_game/tests/: test_game.py
tests/: test_fetch_news.py
